--- a/admin_dashboard/.env
+++ b/admin_dashboard/.env
@@ -1,2 +1,3 @@
 GOOGLE_ID="1095576135761-bhuk0pn04a12gecj0r2o918ut8jstkh3.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
+# REACT_EDITOR=atom
