--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,18 @@
 
 .env
 
-# dependencies/fr
+# dependencies
 frontend/node_modules
 frontend/.pnp
 frontend/.pnp.js
 
-# testing/fr
+# testing
 frontend/coverage
 
-# production/fr
+# production
 frontend/build
 
-# misc/fr
+# misc
 frontend/.env
 frontend/.DS_Store
 frontend/.env.local
@@ -24,26 +24,3 @@ frontend/.env.production.local
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
-
-# dependencies/bc
-backend/node_modules
-backend/.pnp
-backend/.pnp.js
-
-# testing/bc
-backend/coverage
-
-# production/bc
-backend/build
-
-# misc/bc
-backend/.env
-backend/.DS_Store
-backend/.env.local
-backend/.env.development.local
-backend/.env.test.local
-backend/.env.production.local
-
-backend/npm-debug.log*
-backend/yarn-debug.log*
-backend/yarn-error.log*
