--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 .env
-
+node_modules
 # dependencies
 frontend/node_modules
 frontend/.pnp
