--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "artihand",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "eCommerce app built with the MERN stack",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./backend/server.js"
   },
   "author": "Mohammed Handa",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
