--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node ./backend/server.js"
+    "start": "node ./backend/server.js",
+    "server": "nodemon ./backend/server.js"
   },
   "author": "Mohammed Handa",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
   }
 }
