--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mohammed Handa",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^7.4.2"
   },
