--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node ./backend/server.js",
     "server": "nodemon ./backend/server.js",
     "client": "npm start --prefix ./frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client \""
+    "dev": "concurrently \"npm run server\" \"npm run client \"",
+    "data:import": "node ./backend/seeder.js -import",
+    "data:destroy": "node ./backend/seeder.js -d"
   },
   "author": "Mohammed Handa",
   "license": "MIT",
