--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=5000
 MONGO_URI=Add_Your_Mongo_Uri
 JWT_SECRET=ADD_YOUR_SECERT_PHRASE
+PAYPAL_CLIENT_IF=ADD_YOUR-PAYPAL-CLIENT-ID
