--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 uploads
-
-killnode proccess.bash
+terminat.sh
 .env
 node_modules
 # dependencies
