--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ PORT=5000
 MONGO_URI=Add_Your_Mongo_Uri
 JWT_SECRET=ADD_YOUR_SECERT_PHRASE
 PAYPAL_CLIENT_IF=ADD_YOUR-PAYPAL-CLIENT-ID
+PAGINATION_LIMIT=8
